# rag-langchain-ryzen

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
data/: chroma_vector_store.md  langchain_orchestration.md  lemonade_server.md  retrieval_eval.md  sample.md
eval/: gold_qa.example.json
src/rag_app/: __init__.py  __main__.py  config.py  eval_retrieval.py  ingest.py  lemonade_client.py  loaders.py  rag_chain.py  retrieval.py
src/rag_langchain_ryzen.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_cli_help.py  test_config.py  test_eval_metrics.py  test_ingest_helpers.py  test_lemonade_client.py  test_loaders.py  test_rag_format_docs.py  test_retrieval_formatting.py
